--- a/templates/repo-debug-non-oss.repo.j2
+++ b/templates/repo-debug-non-oss.repo.j2
@@ -1,5 +1,5 @@
 [repo-debug-non-oss]
 name=Debug Repository (Non-OSS)
-enabled=0
+enabled={{ repo_debug_non_oss_enabled }}
 autorefresh=1
 baseurl=http://download.opensuse.org/debug/distribution/leap/$releasever/repo/non-oss/
