templates/repo-backports-update.repo.j2: replace hardcoded value for 'enabled' with variable

--- a/templates/repo-backports-update.repo.j2
+++ b/templates/repo-backports-update.repo.j2
@@ -1,6 +1,6 @@
 [repo-backports-update]
 name=Update repository of openSUSE Backports
-enabled=1
+enabled={{ repo_backports_update_enabled }}
 autorefresh=1
 baseurl=http://download.opensuse.org/update/leap/$releasever/backports/
 path=/
