templates/repo-non-oss.repo.j2: replace hardcoded value for 'enabled' with variable

--- a/templates/repo-non-oss.repo.j2
+++ b/templates/repo-non-oss.repo.j2
@@ -1,5 +1,5 @@
 [repo-non-oss]
 name=Non-OSS Repository
-enabled=1
+enabled={{ repo_non_oss_enabled }}
 autorefresh=1
 baseurl=http://download.opensuse.org/distribution/leap/$releasever/repo/non-oss/
