--- a/templates/repo-debug.repo.j2
+++ b/templates/repo-debug.repo.j2
@@ -1,5 +1,5 @@
 [repo-debug]
 name=Debug Repository
-enabled=0
+enabled={{ repo_debug_enabled }}
 autorefresh=1
 baseurl=http://download.opensuse.org/debug/distribution/leap/$releasever/repo/oss/
