templates/repo-sle-debug-update.repo.j2: replace hardcoded value for 'enabled' with variable

--- a/templates/repo-sle-debug-update.repo.j2
+++ b/templates/repo-sle-debug-update.repo.j2
@@ -1,6 +1,6 @@
 [repo-sle-debug-update]
 name=Update repository with debuginfo for updates from SUSE Linux Enterprise 15
-enabled=0
+enabled={{ repo_sle_debug_update_enabled }}
 autorefresh=1
 baseurl=http://download.opensuse.org/debug/update/leap/$releasever/sle/
 path=/
