--- a/templates/repo-debug-update-non-oss.repo.j2
+++ b/templates/repo-debug-update-non-oss.repo.j2
@@ -1,5 +1,5 @@
 [repo-debug-update-non-oss]
 name=Update Repository (Debug, Non-OSS)
-enabled=0
+enabled={{ repo_debug_update_non_oss_enabled }}
 autorefresh=1
 baseurl=http://download.opensuse.org/debug/update/leap/$releasever/non-oss/
