--- a/templates/repo-debug-update.repo.j2
+++ b/templates/repo-debug-update.repo.j2
@@ -1,5 +1,5 @@
 [repo-debug-update]
 name=Update Repository (Debug)
-enabled=0
+enabled={{ repo_debug_update_enabled }}
 autorefresh=1
 baseurl=http://download.opensuse.org/debug/update/leap/$releasever/oss/
