--- a/templates/repo-oss.repo.j2
+++ b/templates/repo-oss.repo.j2
@@ -1,5 +1,5 @@
 [repo-oss]
 name=Main Repository
-enabled=1
+enabled={{ repo_oss_enabled }}
 autorefresh=1
 baseurl=http://download.opensuse.org/distribution/leap/$releasever/repo/oss/
