templates/repo-update-non-oss.repo.j2: replace hardcoded value for 'enabled' with variable

--- a/templates/repo-update-non-oss.repo.j2
+++ b/templates/repo-update-non-oss.repo.j2
@@ -1,5 +1,5 @@
 [repo-update-non-oss]
 name=Update Repository (Non-Oss)
-enabled=1
+enabled={{ repo_update_non_oss_enabled }}
 autorefresh=1
 baseurl=http://download.opensuse.org/update/leap/$releasever/non-oss/
