--- a/templates/repo-sle-update.repo.j2
+++ b/templates/repo-sle-update.repo.j2
@@ -1,6 +1,6 @@
 [repo-sle-update]
 name=Update repository with updates from SUSE Linux Enterprise 15
-enabled=1
+enabled={{ repo_sle_update_enabled }}
 autorefresh=1
 baseurl=http://download.opensuse.org/update/leap/$releasever/sle/
 path=/
