--- a/templates/repo-source.repo.j2
+++ b/templates/repo-source.repo.j2
@@ -1,5 +1,5 @@
 [repo-source]
 name=Source Repository
-enabled=0
+enabled={{ repo_source_enabled }}
 autorefresh=1
 baseurl=http://download.opensuse.org/source/distribution/leap/$releasever/repo/oss/
