templates/repo-update.repo.j2: replace hardcoded value for 'enabled' with variable

--- a/templates/repo-update.repo.j2
+++ b/templates/repo-update.repo.j2
@@ -1,5 +1,5 @@
 [repo-update]
 name=Main Update Repository
-enabled=1
+enabled={{ repo_update_oss_enabled }}
 autorefresh=1
 baseurl=http://download.opensuse.org/update/leap/$releasever/oss/
