--- a/templates/repo-backports-update.repo.j2
+++ b/templates/repo-backports-update.repo.j2
@@ -2,7 +2,7 @@
 name=Update repository of openSUSE Backports
 enabled={{ repo_backports_update_enabled }}
 autorefresh=1
-baseurl=http://download.opensuse.org/update/leap/$releasever/backports/
+baseurl=http://download.opensuse.org/update/leap/{{ releasever }}/backports/
 path=/
 type=rpm-md
 keeppackages=0
