templates/repo-debug.repo.j2: use releasever ansible variable instead of zypper variable $releasever

--- a/templates/repo-debug.repo.j2
+++ b/templates/repo-debug.repo.j2
@@ -2,4 +2,4 @@
 name=Debug Repository
 enabled={{ repo_debug_enabled }}
 autorefresh=1
-baseurl=http://download.opensuse.org/debug/distribution/leap/$releasever/repo/oss/
+baseurl=http://download.opensuse.org/debug/distribution/leap/{{ releasever }}/repo/oss/
