templates/repo-non-oss.repo.j2: use releasever ansible variable instead of zypper variable $releasever

--- a/templates/repo-non-oss.repo.j2
+++ b/templates/repo-non-oss.repo.j2
@@ -2,4 +2,4 @@
 name=Non-OSS Repository
 enabled={{ repo_non_oss_enabled }}
 autorefresh=1
-baseurl=http://download.opensuse.org/distribution/leap/$releasever/repo/non-oss/
+baseurl=http://download.opensuse.org/distribution/leap/{{ releasever }}/repo/non-oss/
