templates/repo-backports-debug-update.repo.j2: use releasever ansible variable instead of zypper variable $releasever

--- a/templates/repo-backports-debug-update.repo.j2
+++ b/templates/repo-backports-debug-update.repo.j2
@@ -2,6 +2,6 @@
 name=Update repository with updates for openSUSE Leap debuginfo packages from openSUSE Backports
 enabled={{ repo_backports_debug_update_enabled }}
 autorefresh=1
-baseurl=http://download.opensuse.org/update/leap/$releasever/backports_debug/
+baseurl=http://download.opensuse.org/update/leap/{{ releasever }}/backports_debug/
 type=NONE
 keeppackages=0
