--- a/templates/repo-debug-update.repo.j2
+++ b/templates/repo-debug-update.repo.j2
@@ -2,4 +2,4 @@
 name=Update Repository (Debug)
 enabled={{ repo_debug_update_enabled }}
 autorefresh=1
-baseurl=http://download.opensuse.org/debug/update/leap/$releasever/oss/
+baseurl=http://download.opensuse.org/debug/update/leap/{{ releasever }}/oss/
