templates/repo-debug-update-non-oss.repo.j2: use releasever ansible variable instead of zypper variable $releasever

--- a/templates/repo-debug-update-non-oss.repo.j2
+++ b/templates/repo-debug-update-non-oss.repo.j2
@@ -2,4 +2,4 @@
 name=Update Repository (Debug, Non-OSS)
 enabled={{ repo_debug_update_non_oss_enabled }}
 autorefresh=1
-baseurl=http://download.opensuse.org/debug/update/leap/$releasever/non-oss/
+baseurl=http://download.opensuse.org/debug/update/leap/{{ releasever }}/non-oss/
