--- a/templates/repo-debug-non-oss.repo.j2
+++ b/templates/repo-debug-non-oss.repo.j2
@@ -2,4 +2,4 @@
 name=Debug Repository (Non-OSS)
 enabled={{ repo_debug_non_oss_enabled }}
 autorefresh=1
-baseurl=http://download.opensuse.org/debug/distribution/leap/$releasever/repo/non-oss/
+baseurl=http://download.opensuse.org/debug/distribution/leap/{{ releasever }}/repo/non-oss/
