templates/repo-update.repo.j2: use releasever ansible variable instead of zypper variable $releasever

--- a/templates/repo-update.repo.j2
+++ b/templates/repo-update.repo.j2
@@ -2,4 +2,4 @@
 name=Main Update Repository
 enabled={{ repo_update_oss_enabled }}
 autorefresh=1
-baseurl=http://download.opensuse.org/update/leap/$releasever/oss/
+baseurl=http://download.opensuse.org/update/leap/{{ releasever }}/oss/
