templates/repo-sle-update.repo.j2: use releasever ansible variable instead of zypper variable $releasever

--- a/templates/repo-sle-update.repo.j2
+++ b/templates/repo-sle-update.repo.j2
@@ -2,7 +2,7 @@
 name=Update repository with updates from SUSE Linux Enterprise 15
 enabled={{ repo_sle_update_enabled }}
 autorefresh=1
-baseurl=http://download.opensuse.org/update/leap/$releasever/sle/
+baseurl=http://download.opensuse.org/update/leap/{{ releasever }}/sle/
 path=/
 type=rpm-md
 keeppackages=0
