templates/repo-source.repo.j2: use releasever ansible variable instead of zypper variable $releasever

--- a/templates/repo-source.repo.j2
+++ b/templates/repo-source.repo.j2
@@ -2,4 +2,4 @@
 name=Source Repository
 enabled={{ repo_source_enabled }}
 autorefresh=1
-baseurl=http://download.opensuse.org/source/distribution/leap/$releasever/repo/oss/
+baseurl=http://download.opensuse.org/source/distribution/leap/{{ releasever }}/repo/oss/
