templates/repo-oss.repo.j2: use releasever ansible variable instead of zypper variable $releasever

--- a/templates/repo-oss.repo.j2
+++ b/templates/repo-oss.repo.j2
@@ -2,4 +2,4 @@
 name=Main Repository
 enabled={{ repo_oss_enabled }}
 autorefresh=1
-baseurl=http://download.opensuse.org/distribution/leap/$releasever/repo/oss/
+baseurl=http://download.opensuse.org/distribution/leap/{{ releasever }}/repo/oss/
