--- a/templates/repo-debug.repo.j2
+++ b/templates/repo-debug.repo.j2
@@ -3,3 +3,4 @@ name=Debug Repository
 enabled={{ repo_debug_enabled }}
 autorefresh=1
 baseurl=http://download.opensuse.org/debug/distribution/leap/{{ releasever }}/repo/oss/
+keeppackages=0
