templates/repo-debug-non-oss.repo.j2: update to latest state on Leap 15.4 VM

--- a/templates/repo-debug-non-oss.repo.j2
+++ b/templates/repo-debug-non-oss.repo.j2
@@ -3,3 +3,4 @@ name=Debug Repository (Non-OSS)
 enabled={{ repo_debug_non_oss_enabled }}
 autorefresh=1
 baseurl=http://download.opensuse.org/debug/distribution/leap/{{ releasever }}/repo/non-oss/
+keeppackages=0
