templates/repo-oss.repo.j2: update to latest state on Leap 15.4 VM

--- a/templates/repo-oss.repo.j2
+++ b/templates/repo-oss.repo.j2
@@ -3,3 +3,5 @@ name=Main Repository
 enabled={{ repo_oss_enabled }}
 autorefresh=1
 baseurl=http://download.opensuse.org/distribution/leap/{{ releasever }}/repo/oss/
+type=rpm-md
+keeppackages=0
