templates/repo-debug-update.repo.j2: update to latest state on Leap 15.4 VM

--- a/templates/repo-debug-update.repo.j2
+++ b/templates/repo-debug-update.repo.j2
@@ -3,3 +3,4 @@ name=Update Repository (Debug)
 enabled={{ repo_debug_update_enabled }}
 autorefresh=1
 baseurl=http://download.opensuse.org/debug/update/leap/{{ releasever }}/oss/
+keeppackages=0
