--- a/templates/repo-debug-update-non-oss.repo.j2
+++ b/templates/repo-debug-update-non-oss.repo.j2
@@ -3,3 +3,4 @@ name=Update Repository (Debug, Non-OSS)
 enabled={{ repo_debug_update_non_oss_enabled }}
 autorefresh=1
 baseurl=http://download.opensuse.org/debug/update/leap/{{ releasever }}/non-oss/
+keeppackages=0
