--- a/templates/repo-source.repo.j2
+++ b/templates/repo-source.repo.j2
@@ -3,3 +3,4 @@ name=Source Repository
 enabled={{ repo_source_enabled }}
 autorefresh=1
 baseurl=http://download.opensuse.org/source/distribution/leap/{{ releasever }}/repo/oss/
+keeppackages=0
