--- a/templates/repo-update-non-oss.repo.j2
+++ b/templates/repo-update-non-oss.repo.j2
@@ -3,3 +3,5 @@ name=Update Repository (Non-Oss)
 enabled={{ repo_update_non_oss_enabled }}
 autorefresh=1
 baseurl=http://download.opensuse.org/update/leap/{{ releasever }}/non-oss/
+type=rpm-md
+keeppackages=0
