templates/repo-update.repo.j2: update to latest state on Leap 15.4 VM

--- a/templates/repo-update.repo.j2
+++ b/templates/repo-update.repo.j2
@@ -3,3 +3,5 @@ name=Main Update Repository
 enabled={{ repo_update_oss_enabled }}
 autorefresh=1
 baseurl=http://download.opensuse.org/update/leap/{{ releasever }}/oss/
+type=rpm-md
+keeppackages=0
