REFACTOR: to not overwrite repo-sle-update.repo from MicroOS, add the one from Leap as repo-leap-sle-update.repo; adjust variables accordingly

--- a/templates/repo-leap-sle-update.repo.j2
+++ b/templates/repo-leap-sle-update.repo.j2
@@ -1,6 +1,6 @@
 [repo-sle-update]
 name=Update repository with updates from SUSE Linux Enterprise 15
-enabled={{ repo_sle_update_enabled }}
+enabled={{ repo_leap_sle_update_enabled }}
 autorefresh=1
 baseurl=http://download.opensuse.org/update/leap/{{ releasever }}/sle/
 path=/
